<resources>
    <string name="app_name">FitnessLab</string>
    <string name="Recipes">Recipes</string>
    <string name="Home">Home</string>
    <string name="Exercises">Exercises</string>
    <string name="Start">Start</string>
    <string name="Pause">Pause</string>
    <string name="Next">Next</string>
    <string name="Exit">Exit</string>
    <string name="Conq">Congratulations!</string>
    <string name="SignOut">SignOut</string>
    <string name="Hello">Hello</string>
    <string name="Achieve">Achieve your dream body and healthy habits</string>
    <string name="Explore">You can Explore our Recipes and start working out today with our exercise plans</string>
    <string name="RecipeAdvice">The Recipes are made from nutritionists from all across the globe. Eat healthy, be healthy</string>
    <string name="ExerciseAdvice">It is recommended to not exercise more than 2 workouts per day because of overheating certain muscles</string>
    <string name="Register">Register</string>
    <string name="FirstName">First Name</string>
    <string name="Surname">Surname</string>
    <string name="Email">E-mail</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="ForgotPw">Forgot Password?</string>
    <string name="LoginGoogle">Login with Google</string>
    <string name="DontCreateAcc">Do nоt want to create an account?</string>
    <string name="LoginGuest">Login as Guest</string>
    <string name="Reset">Reset</string>
    <string name="FinishAbs">You Finished your Abs Workout!</string>
    <string name="FinishArms">You Finished your Arms Workout!</string>
    <string name="FinishChest">You Finished your Chest Workout!</string>
    <string name="FinishLegs">You Finished your Legs Workout!</string>
    <string name="FinishBack">You Finished your Back and Shoulders Workout!</string>
    <string name="FinishWeight">You Finished your Weight-Loss Workout!</string>
    <string name="HighProtein">High Protein Food</string>
    <string name="Title11">Chopped chilli chicken stir fry</string>
    <string name="Ingredients11">- 1/4 cup (60ml) sunflower oil\n- 250g purple eggplants, chopped if large\n- 100g pea eggplants (from Asian grocers), blanched\n- 1 bunch spring onion, sliced\n- 1/4 cup (75g) gluten-free chilli paste or chilli sauce\n- 2 long red chillies, thinly sliced\n- 1 bunch Thai basil, leaves picked\n- 500g chicken mince\n- Steamed rice, to serve\n- Fried eggs, to serve</string>
    <string name="Preparing11">1. Heat 2 tbs oil in a wok or large frypan over medium-high heat. Add eggplants, season and cook, stirring, for 3-4 minutes until golden. Remove from pan and set aside. Return pan to medium-high heat with remaining 1 tbs oil. Cook onion, chilli paste and half the chilli and basil, stirring, for 2-3 minutes until softened. Add chicken and cook, breaking up with a spoon, for 10 minutes or until browned. Return the eggplant to pan and toss to warm through.\n\n2. Divide rice, chicken and eggs among plates. Top with remaining basil and chilli.</string>
    <string name="Title12">Minute steaks with romesco salad</string>
    <string name="Ingredients12">- 4 (x 100g) beef minute steaks\n- 1/2 teaspoon smoked paprika (pimenton)\n- 1/4 cup (60ml) olive oil\n- 1kg chat potatoes\n- 200g green beans, trimmed\n- 3 chargrilled capsicums\n- Pinch chilli flakes\n- 1 tablespoon red wine vinegar\n- 3 vine-ripened tomatoes, seeds removed, sliced\n- 50g whole roasted almonds, chopped</string>
    <string name="Preparing12">1. Rub steaks with paprika and 1 tablespoon oil, then season. Set aside.\n\n2. Place potatoes in a saucepan and cover with cold water. Bring to the boil over medium-high heat, then reduce heat to medium and cook for 12-15 minutes until tender, adding beans for the final 2 minutes. Drain, quarter potatoes and set aside.\n\n3. Meanwhile, place capsicums, chilli, vinegar, one-third of the tomato, 30g almonds and remaining 2 tablespoons oil in a small food processor and whiz until a loose paste. Season to taste, then set dressing aside.\n\n4. Preheat a chargrill or frypan over medium-high heat. Cook the steaks for 30 seconds each side or until just cooked through. Remove from the pan and rest, loosely covered with foil, for 2 minutes.\n\n5. Toss the beans, potato and remaining tomato and almonds with the dressing and season. Divide the Romesco salad among 4 serving plates and serve with steaks.\n\n</string>
    <string name="Title13">Steak, corn and red bean salad</string>
    <string name="Ingredients13">- 500g piece lean beef sirloin steak, trimmed of excess fat\n- 1 tablespoon Worcestershire sauce\n- 2 teaspoons ground cumin\n- 1 tablespoon olive oil\n- 1 cup frozen corn kernels\n- 800g canned red kidney beans, rinsed, drained\n- Juice of 1 lemon\n- 2 spring onions, sliced on the diagonal</string>
    <string name="Preparing13">1.  Place the steak in a bowl and sprinkle over the Worcestershire sauce and 1 teaspoon of the ground cumin. Toss to coat the steak in the mixture.\n\n2. Heat the olive oil in a frypan over medium-high heat. When the pan is hot, add the steak and cook for about 5 minutes each side for medium, or until cooked to your liking. Remove from the heat and set the steak aside in a warm place for a few minutes to rest, then slice.\n\n3. Meanwhile, blanch the corn kernels in a pan of boiling water. Combine the drained kidney beans and corn in a bowl. Add the lemon juice and the remaining teaspoon of ground cumin to the bean mixture and toss to combine.\n\n4. Add the sliced steak and the sliced spring onion to the salad and toss gently to combine.</string>
    <string name="LowCalorie">Low Calorie Food</string>
    <string name="Title21">Eggs with lentils and spiced mint recipe</string>
    <string name="Ingredients21">- 2 tsp olive oil, plus extra, to drizzle\n- 300g packet Coles Cauliflower Vegetable Rice\n- 410g can diced tomatoes with garlic and onion\n- 1 red onion, thinly sliced\n- 1/2 cup chopped fresh mint leaves\n- 1/2 tsp ground sumac\n- 1/2 cup drained canned lentils\n- 100g baby spinach\n- 4 eggs\n- 1 tbsp dukkah\n- 130g (1/2 cup) natural yoghurt</string>
    <string name="Preparing21">1. Heat the oil in a large frying pan over medium heat. Add cauliflower mix. Cook, stirring, for 3 minutes. Add tomatoes. Half-fill empty can with water. Pour into pan. Stir to combine then bring to the boil. Reduce heat to low. Simmer for 10 minutes.\n\n2. Meanwhile, combine the onion, mint and sumac in a small bowl.\n\n3. Stir lentils into hot vegie mixture. Season. Scatter with spinach. Cover. Cook for 1 minute. Make 4 indents in the mixture. Crack an egg into each indent. Cook, covered, for 2-3 minutes or until egg whites are just set.\n\n4. Divide the lentil mixture and eggs among serving plates. Top with mint mixture and a dollop of yoghurt. Drizzle over extra oil and sprinkle with dukkah. Season and serve.</string>
    <string name="Title22">Healthier yellow chicken curry</string>
    <string name="Ingredients22">-  2 tsp coconut oil\n- 70g (1/4 cup) yellow curry paste\n- 2 tbsp finely chopped fresh coriander root and stem, plus leaves, to serve\n- 3 tsp finely grated fresh ginger\n-1 stick lemongrass, white part only, finely chopped\n-  270ml can coconut milk\n-  250ml (1 cup) Massel salt reduced chicken style liquid stock\n-  1 tbsp coconut sugar\n-  1 tbsp fish sauce\n-  1 red onion, cut into thin wedges\n-  600g butternut pumpkin, skin on, cut into 5cm-long wedges\n-  500g chicken breast, thinly sliced\n-  200g green beans, trimmed, halved\n-  1 lime, halved\n-  90g bean thread vermicelli noodles, cooked, to serve  </string>
    <string name="Preparing22">1.  Heat the oil in a large saucepan over medium-high heat. Add the curry paste, coriander root and stem, ginger and lemongrass. Cook, stirring, for 1 minute or until aromatic.\n\n2. Add the coconut milk. Cook, stirring, for 3 minutes or until oil separates. Stir in the stock, sugar and fish sauce. Add the onion and pumpkin. Bring to a simmer. Reduce heat to low. Cook, covered, for 7 minutes. Add the chicken. Cook, covered, for 5 minutes or until chicken is just cooked through. Add the beans. Cook, covered, for 2 minutes or until vegetables are just tender.\n\n3. Squeeze over the juice of half a lime. Cut the remaining lime half into wedges. Sprinkle curry with the coriander leaves and serve with lime wedges and noodles.</string>
    <string name="Title23">Hearty vego frying-pan pie</string>
    <string name="Ingredients23">- 400g packet Woolworths Simply Simmer Veggie Mix\n- 450g tomato pasta sauce with herbs\n- 400g can borlotti beans, rinsed, drained\n- 2 tbsp chopped fresh oregano\n- 2 sheets reduced-fat puff pastry, partially thawed\n- </string>
    <string name="Preparing23">1. Preheat the oven to 200C/180C fan forced. Heat a medium ovenproof frying pan over medium heat. Spray with olive oil. Add vegetablemix and cook, stirring, for 3-4 minutes or until just softened.\n\n2. Add the Napoli sauce and cook, stirring, for 1 minute or until warmed through. Stir in the beans and oregano. Remove from heat.\n\n3. Lay the pastry sheets over the pie filling at alternate angles. Press edges to seal. Fold points inwards to create a decorative edge. Cut 2 small slits in the top of the pie for steam to escape. Bake for 25-30 minutes or until puffed and golden.</string>
    <string name="Title24">Chicken cacciatore soup</string>
    <string name="Ingredients24">- 1 tbsp extra virgin olive oil\n- 1kg skinless chicken thigh cutlets\n- 1 brown onion, chopped\n- 1 carrot, finely chopped\n- 2 celery stalks, sliced\n- 200g cup mushrooms, sliced\n- 1/4 cup fresh rosemary leaves, plus extra to serve\n- 2 garlic cloves, crushed\n- 1 cup red wine\n- 700g bottle tomato passata\n- 1 litre Massel salt reduced chicken style liquid stock\n- 250g dried rigatoni pasta\n- 1/2 cup pitted kalamata olives\n- Fresh flat-leaf parsley leaves, chopped, to serve</string>
    <string name="Preparing24">1. Heat oil in large heavy-based saucepan over high heat. Cook the chicken for 4 minutes each side or until browned. Transfer to a plate.\n\n2. Reduce heat to medium. Add onion, carrot, celery, mushroom and rosemary to pan. Cook, stirring occasionally, for 5 minutes or until vegetables start to brown. Add garlic. Cook for 30 seconds or until fragrant. Add wine. Bring to a simmer. Simmer, uncovered, for 3 minutes or until reduced by half.\n\n3. Add passata, stock and 2 cups water. Stir to combine. Bring to a simmer. Return chicken to pan. Cook, covered, for 45 minutes or until chicken is very tender. Using tongs, transfer chicken to a board.\n\n4. Reduce heat to medium. Add pasta to pan. Cook, covered, for 15 minutes or until pasta is tender.\n\n5. Meanwhile, remove and discard bones from chicken. Using 2 forks, shred meat. Return chicken to pan with olives. Cook for 2 minutes or until heated through. Serve stoup topped with parsley and extra rosemary.</string>
    <string name="Vegetarian">Vegetarian Food</string>
    <string name="Title31">Creamy vegetarian pot pies</string>
    <string name="Ingredients31">- 40g butter\n- 1 leek, pale section only, thinly sliced\n- 500g packet chopped pumpkin and sweet potato\n- 2 garlic cloves, crushed\n- 160ml (2/3 cup) Massel Vegetable Liquid Stock\n- 250ml (1 cup) thickened cream\n- 1 tbsp Dijon mustard\n- 200g broccoli, cut into small florets\n- 60g baby spinach\n- 1 tbsp fresh thyme leaves, plus extra, to serve\n- 100g (1 cup) pre-grated 3 cheese blend\n- 2 sheets frozen butter pastry, just thawed\n- 1 egg, lightly whisked</string>
    <string name="Ingredients">Ingredients</string>
    <string name="Preparing">Preparing</string>
</resources>