<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeContent"
    android:background="@color/MainColor">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageViewContent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/chopped_chilli_chicken_stir_fry_28400_1" />

                <ImageView
                    android:id="@+id/backButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:clickable="true"
                    android:src="@drawable/ic_baseline_arrow_back_24" />


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/TitleColor">

                <TextView
                    android:id="@+id/txtViewContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Title11"
                    android:textSize="24dp"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/black"
                    android:layout_marginLeft="8dp" />

            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <TextView
                android:id="@+id/txtIngridients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Ingredients"
                android:textSize="20dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black"
                android:layout_marginLeft="15dp"/>

            <TextView
                android:id="@+id/txtIngridientsContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/Ingredients11"
                android:textColor="@color/black"
                android:textSize="18dp" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp"/>
            <TextView
                android:id="@+id/txtPreparing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Preparing"
                android:textSize="20dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black"
                android:layout_marginLeft="15dp"/>
            <TextView
                android:id="@+id/txtPreparingContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/Preparing11"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@color/TitleColor"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>